--- a/HMS/templates/EntryPagesLayout.html
+++ b/HMS/templates/EntryPagesLayout.html
@@ -8,28 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>HMS</title>
   </head>
   <body>
-    <!--Navigation Bar-->
-   <header class="site-header" style="background-image: url('static/img/back.png')">
-        <nav class="navbar navbar-expand-md sticky-top fixed-top">
-            <div class="container">
-                <img class="hms" src="static/img/HMS.png" />
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarToggle">
-        <!-- Navbar Right Side -->
-                    <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="#">Home</a>
-                        <a class="nav-item nav-link" href="#">Take a Tour</a>
-                        <a class="nav-item nav-link" href="#">About</a>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </header>
+
 
 
     <!-- Optional JavaScript -->
