--- a/HMS/static/main.css
+++ b/HMS/static/main.css
@@ -1,8 +1,15 @@
-body{ font-family: sans-serif;
-    background: url('static/img/back.png');
+header.masthead {
+  padding-top: 10rem;
+  padding-bottom: calc(10rem - 56px);
+  background-image:url('/static/img/back2.jpg');
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-.hms{
-    width: 50px;
-    height: 50px;
+.icon{
+    width:122px;
+    height:68px;
 }
