--- a/HMS/templates/EntryPagesLayout.html
+++ b/HMS/templates/EntryPagesLayout.html
@@ -20,16 +20,16 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-white" href="#about">Home</a>
+              <a class="nav-link js-scroll-trigger text-white" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-white" href="#services">About</a>
+              <a class="nav-link js-scroll-trigger text-white" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-white" href="#portfolio">Portfolio</a>
+              <a class="nav-link js-scroll-trigger text-white" href="#">Take a Tour</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-white" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger text-white" href="#">Login/SignUp</a>
             </li>
           </ul>
         </div>
@@ -47,7 +47,7 @@
             <hr>
           </div>
           <div class="col-black mx-auto">
-            <p class="text-faded mb-5">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+            <p class="text-white mb-5">A reliable service that helps hostels manage the day to day activities in the respective hostels.<br>And also help students secure and leave rooms/hostels to other ones</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
           </div>
         </div>
