--- a/HMS/templates/About_TourLayout.html
+++ b/HMS/templates/About_TourLayout.html
@@ -43,10 +43,9 @@
     </header>
 
 
-
-
-
-
+    <main role="main" class="container">
+        {% block content %}{% endblock %}
+    </main>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
