--- a/HMS/templates/EntryPagesLayout.html
+++ b/HMS/templates/EntryPagesLayout.html
@@ -13,7 +13,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <img class="icon navbar-brand js-scroll-trigger" src="/static/img/HMS.png" alt="HMS icon" href="#page-top" >
+        <img class="icon navbar-brand js-scroll-trigger" src="/static/img/whitelogo.png" alt="HMS icon" href="#page-top" >
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,7 +29,10 @@
               <a class="nav-link js-scroll-trigger text-white" href="#">Take a Tour</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-white" href="#">Login/SignUp</a>
+              <a class="nav-link js-scroll-trigger text-white" href="#">SignUp</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger text-white" href="#">Login</a>
             </li>
           </ul>
         </div>
@@ -41,18 +44,42 @@
         <div class="row">
           <div class="col-black mx-auto">
             <h1 class="text-uppercase">
-              <strong>Welcome to Ashesi Hostel Mangement System</strong><br>
+              Welcome to Ashesi Hostel Mangement System<br>
               <strong>HMS</strong>
             </h1>
             <hr>
           </div>
           <div class="col-black mx-auto">
             <p class="text-white mb-5">A reliable service that helps hostels manage the day to day activities in the respective hostels.<br>And also help students secure and leave rooms/hostels to other ones</p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#">Register Now</a><br>
+            <a>Already Have An Account? </a><a href="#">Login Here</a>
           </div>
         </div>
       </div>
     </header>
+    <section id="contact">
+      <div class="container mt-10">
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading">Let's Get In Touch!</h2>
+            <hr class="my-4">
+            <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 ml-auto text-center">
+            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
+            <p>123-456-6789</p>
+          </div>
+          <div class="col-lg-4 mr-auto text-center">
+            <i class="glyphicon glyphicon-earphone"></i>
+            <p>
+              <a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
 
