fixed navbar and added content to about page

--- a/HMS/templates/about.html
+++ b/HMS/templates/about.html
@@ -1,5 +1,46 @@
 {% extends "About_TourLayout.html"%}
 {% block content %}
+    <div class="container">
+        <div>
+            <h1 style="text-align: center"> About HMS</h1>
+        </div>
+        <br>
+
+        <div class="row">
+            <div>
+                <h3 style="text-align: center">The HMS Story</h3>
+                <br>
+                <p>
+                    Every student wants a nice hostel close to campus, but almost always we find that students and hostels managers end up in a stressful mess because students will book late and hostel managers will keep overbooking.
+                    Students are also left at the mercy of the hostel managers to decide which room they go, if they cannot make the trip to choose their room.
+                    Sometimes the students end up without rooms because the hostel managers overbooked and cannot identify the first or last person on their lists.
+                    That's where HMS comes in, to offer students a stress free hostel booking service and a chance to actually see and choose the room they want to be in.
+                    We also completely erase the manager's hurdles by booking only the right number and giving them direct access to students.
+                </p>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div>
+                <h3 style="text-align: center">How we began</h3>
+                <br>
+                <p>
+                   We began operations in 2018 when we as students realised the stress and frustration it took just to get the perfect room.
+                    Hostel managers immediately understood our value proposition and today we manage all the hostels on the Ashesi campus😉
+
+                </p>
+            </div>
+        </div>
+        <br>
+        <div>
+            <div>
+                <h3 style="text-align: center">Meet the team</h3>
+                <br>
+            </div>
+        </div>
+
+
+    </div>
 
 
 {% endblock %}
