--- a/HMS/static/main.css
+++ b/HMS/static/main.css
@@ -18,6 +18,11 @@ header{
     text-align: center;
     color: white;
 }
+
+.navbar-custom {
+    background-color: rgba(0,0,0,0.7);
+}
+
 .icon{
     width:122px;
     height:68px;
