updated about page

--- a/HMS/templates/about.html
+++ b/HMS/templates/about.html
@@ -2,13 +2,13 @@
 {% block content %}
     <div class="container">
         <div>
-            <h1 style="text-align: center"> About HMS</h1>
+            <h1 class = "text-center display-1"> About HMS</h1>
         </div>
         <br>
 
         <div class="row">
             <div>
-                <h3 style="text-align: center">The HMS Story</h3>
+                <h3 class = "text-center display-4">The HMS Story</h3>
                 <br>
                 <p>
                     Every student wants a nice hostel close to campus, but almost always we find that students and hostels managers end up in a stressful mess because students will book late and hostel managers will keep overbooking.
@@ -22,7 +22,7 @@
         <br>
         <div class="row">
             <div>
-                <h3 style="text-align: center">How we began</h3>
+                <h3 class = "text-center display-4">How we began</h3>
                 <br>
                 <p>
                    We began operations in 2018 when we as students realised the stress and frustration it took just to get the perfect room.
@@ -34,7 +34,41 @@
         <br>
         <div>
             <div>
-                <h3 style="text-align: center">Meet the team</h3>
+                <h3 class = "text-center display-4">Meet the team</h3>
+                <br>
+
+                <div class="row">
+                    <div class="card col-md-4 col-sm-6 col-xs-12 border-0" style="width: 18rem;">
+                      <img class="card-img-top rounded-circle" style="height: 300px" src="/static/img/back3.jpg" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Daniel Olukoya</h5>
+                        <p class="card-text">Junior student at Ashesi University. Offering Computer Science.</p>
+                      </div>
+                    </div>
+
+                    <div class="card col-md-4 col-sm-6 col-xs-12 border-0" style="width: 18rem;">
+                      <img class="card-img-top rounded-circle" style="height: 300px" src="/static/img/back3.jpg" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Yaw Darfour Botwe</h5>
+                        <p class="card-text">Junior student at Ashesi University. Offering Computer Science.</p>
+                      </div>
+                    </div>
+
+                    <div class="card col-md-4 col-sm-6 col-xs-12 border-0" style="width: 18rem;">
+                      <img class="card-img-top rounded-circle" style="height: 300px" src="/static/img/back3.jpg" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Oswald Fiifi Amissah</h5>
+                        <p class="card-text">Junior student at Ashesi University. Offering Computer Science.</p>
+                      </div>
+                    </div>
+
+
+                </div>
+
+            </div>
+            <div>
+                <br>
+                <br>
                 <br>
             </div>
         </div>
