--- a/HMS/static/main.css
+++ b/HMS/static/main.css
@@ -10,6 +10,94 @@
   background-size: cover;
 }
 */
+#background{
+  margin: 0;
+  padding: 0;
+  background-image: url('/static/img/back7.jpg');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 664px;
+
+}
+.loginbox{
+  background-image: url('/static/img/rect.jpg');
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  padding: 70px 30px;
+}
+
+#signup{
+  margin: 10px;
+  width: 320px;
+  height: 50px;
+  background-color: #000;
+  color: #fff;
+  top: 85%;
+  left: 49.3%;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  box-sizing: border-box;
+  padding: 5px 30px;
+}
+
+h1{
+  margin: 0;
+  padding: 0 0 20px;
+  text-align: center;
+  font-size: 22px;
+}
+
+.loginbox p{
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+}
+
+.loginbox input{
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+::placeholder{
+  color: #B9B9B9;
+  opacity: 1;
+}
+.loginbox input[type="text"], input[type="password"]{
+  border:none;
+  background:#FFFFFF;
+  border-radius: 20px;
+  box-shadow: 10px;
+  outline: none;
+  height: 40px;
+  font-size: 10px;
+  text-decoration-color: #B9B9B9;
+  color: #fff;
+ }
+
+.loginbox input[type="submit"]{
+  border:none;
+  outline: none;
+  height: 40px;
+  background:#52b1ff;
+  font-size: 18px;
+  border-radius: 20px;
+ }
+
+.loginbox input[type="submit"]:hover{
+  cursor: pointer;
+  background-color: #2c9efb;
+  color: #000;
+
+}
+
+
+#login{
+  color: #52b1ff;
+}
+
 header{
     background-image: url('/static/img/back7.jpg');
     background-size: cover;
@@ -17,6 +105,9 @@ header{
     height: 664px;
     text-align: center;
     color: white;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
 }
 .icon{
     width:122px;
