--- a/HMS/templates/layout.html
+++ b/HMS/templates/layout.html
@@ -11,6 +11,7 @@
     <title>HMS</title>
   </head>
   <body>
+    <!--Nav Bar-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <img class="icon navbar-brand js-scroll-trigger" src="/static/img/whitelogo.png" alt="HMS icon" href="#page-top" >
@@ -39,26 +40,25 @@
       </div>
     </nav>
 
-    <header class="masthead text-center text-white d-flex">
-      <div class="container my-auto">
-        <div class="row">
-          <div class="col-black mx-auto">
-            <h1 class="text-uppercase">
-              Welcome to Ashesi Hostel Mangement System<br>
-              <strong>HMS</strong>
-            </h1>
-            <hr>
-          </div>
-          <div class="col-black mx-auto">
-            <p class="text-white mb-5">A reliable service that helps hostels manage the day to day activities in the respective hostels.<br>And also help students secure and leave rooms/hostels to other ones</p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#">Register Now</a><br><br>
-            <a>Already Have An Account? </a><a id="login" href="#">Login Here</a>
-          </div>
-        </div>
+    <!--login box-->
+    <div id="background">
+      <div class="loginbox">
+        <h1>Login</h1>
+        <form>
+          <p>Email</p>
+          <input type="text" name="" placeholder="Enter Email">
+          <p>Password</p>
+          <input type="password" name="" placeholder="Enter Password">
+          <input type="submit" name="" value="Login">
+          <a href="#">Forgotten Password</a>
+        </form>
       </div>
-    </header>
 
+      <div id="signup">
+        <a>Dont have an account? </a><a href="#">Sign Up</a>
+      </div>
 
+    </div>
 
 
     <!-- Optional JavaScript -->
