--- a/HMS/static/main.css
+++ b/HMS/static/main.css
@@ -16,94 +16,64 @@
   background-image: url('/static/img/back7.jpg');
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
   width: 100%;
-  height: 664px;
+  height: 100%;
 
 }
-.loginbox{
-  background-image: url('/static/img/rect.jpg');
-  top: 50%;
-  left: 50%;
-  position: absolute;
-  transform: translate(-50%,-50%);
-  padding: 70px 30px;
-}
 
-#signup{
-  margin: 10px;
-  width: 320px;
-  height: 50px;
-  background-color: #000;
-  color: #fff;
-  top: 85%;
-  left: 49.3%;
-  position: absolute;
-  transform: translate(-50%,-50%);
-  box-sizing: border-box;
-  padding: 5px 30px;
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
 }
 
 h1{
   margin: 0;
   padding: 0 0 20px;
   text-align: center;
-  font-size: 22px;
+  font-size: 60px;
+}
+strong{
+  font-size: 60px;
 }
 
-.loginbox p{
-  margin: 0;
-  padding: 0;
-  font-weight: bold;
+
+#aa{
+  font-size: 100px;
 }
 
-.loginbox input{
-  width: 100%;
-  margin-bottom: 20px;
-}
-
-::placeholder{
+/*::placeholder{
   color: #B9B9B9;
   opacity: 1;
-}
-.loginbox input[type="text"], input[type="password"]{
-  border:none;
-  background:#FFFFFF;
-  border-radius: 20px;
-  box-shadow: 10px;
-  outline: none;
-  height: 40px;
-  font-size: 10px;
-  text-decoration-color: #B9B9B9;
-  color: #fff;
- }
-
-.loginbox input[type="submit"]{
-  border:none;
-  outline: none;
-  height: 40px;
-  background:#52b1ff;
-  font-size: 18px;
-  border-radius: 20px;
- }
-
-.loginbox input[type="submit"]:hover{
-  cursor: pointer;
-  background-color: #2c9efb;
-  color: #000;
-
-}
+}*/
 
 
 #login{
   color: #52b1ff;
 }
 
-header{
-    background-image: url('/static/img/back7.jpg');
-    background-size: cover;
-    background-color: rgba(0, 0, 0, 0.7);
-    height: 664px;
+.hbody{
+  background-image: url('/static/img/back7.jpg');
+  background-size: cover;
+
+}
+
+.hbody h1 strong{
+  margin-top: 40px;
+}
+
+.hbody p{
+  font-size: 24px;
+}
+
+header.masthead{
+    background-color: rgba(0, 0, 0, 0);
     text-align: center;
+    height: 664px;
     color: white;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -115,6 +85,130 @@ header{
 }
 
 .icon{
-    width:122px;
-    height:68px;
+    width:91px;
+    height:50px;
 }
+
+.navbar{
+  background-color: rgba(0,0,0,1);
+  position: fixed;
+  width: 100%;
+  box-shadow: 3px;
+}
+
+.lnavbar{
+  background-color: rgba(0,0,0,0);
+  position: fixed;
+  font-size: 19px;
+  float: right;
+  margin-left: 60px;
+  width: 100%;
+  box-shadow: 3px;
+}
+
+#box{
+  position: absolute;
+  top: 42%;
+  left: 50%;
+  margin-top: 20px;
+  transform: translate(-50%,-50%);
+  width: 500px;
+  background-color: hsla(0, 100%, 100%, 0.7);;
+  padding: 40px;
+  box-sizing: border-box;
+  border: 1px solid rgba(0,0,0,0.1);
+  box-shadow: 0 5px 10px rgba(0,0,0,0.3);
+  border-radius: 40px;
+
+}
+
+#box input{
+  padding: 10px 0;
+  margin-bottom: 30px;
+  width: 100%;
+  box-sizing: border-box;
+  outline: none;
+  border:none;
+  background-color: transparent;
+  border-bottom: 2px solid black;
+}
+
+#box input:focus ~label,
+#box input:valid ~label{
+  top:-12px;
+  left: 0;
+  color: #52b1ff;
+  font-size: 12px;
+  font-weight: bold;
+
+}
+
+#box input:focus,
+#box input:valid{
+  border-bottom: 2px solid #52b1ff;
+}
+
+#box input[type="submit"]{
+  border-bottom: none;
+  cursor: pointer;
+  background-color:#52b1ff;
+  color: #fff;
+  margin-bottom: 0;
+  text-transform: uppercase;
+  border-radius: 10px;
+  border-radius: 40px;
+}
+
+#box form div{
+  position: relative;
+}
+
+#box form div label{
+  position: absolute;
+  top: 10px;
+  left: 0;
+  color: black;
+  transition: .5s;
+  pointer-events: none;
+}
+
+#box2{
+  position: absolute;
+  top: 57%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 500px;
+  background-color: hsla(0, 100%, 100%, 0.7);
+  margin-top: 210px;
+  padding: 40px;
+  box-sizing: border-box;
+  border: 1px solid rgba(0,0,0,0.1);
+  box-shadow: 0 5px 10px rgba(0,0,0,0.3);
+  border-radius: 40px;
+  text-align: center;
+  font-size: 18px;
+}
+
+
+
+#registerbody{
+  background-image: url('/static/img/back2.jpg');
+  background-size: cover;
+}
+.navbar-toggler{
+  background-color: dimgray;
+}
+
+.logo{
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-bottom: 50px;
+  width: 50%;
+  padding: 0;
+  float:
+}
+
+/*.teamimg{
+  max-height: 300px;
+
+}*/
