--- a/HMS/templates/About_TourLayout.html
+++ b/HMS/templates/About_TourLayout.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+<!--    <link href='https://fonts.googleapis.com/css?family=Alex Brush' rel='stylesheet'><style>
+-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link href="../static/main.css" rel="stylesheet">
@@ -22,7 +24,7 @@
     <!--Navigation Bar-->
     <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top" id="mainNav">
         <div class="container">
-            <a href="/"> <img class="icon navbar-brand js-scroll-trigger" src="/static/img/blacklogo.png" alt="HMS icon" href="#page-top"> </a>
+            <a href="/"> <img class="icon navbar-brand js-scroll-trigger" src="/static/img/whitelogo.png" alt="HMS icon" href="#page-top"> </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,29 +34,29 @@
                 <ul class="navbar-nav ml-auto">
                     {% if title == "Take A Tour" %}
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-dark" href="{{ url_for('home')}}">Home</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('home')}}">Home</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-dark" href="{{ url_for('about') }}">About</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('about') }}">About</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-dark" href="#">Sign Up</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="#">Sign Up</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-dark" href="#">Login</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="#">Login</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-dark" href="{{ url_for('home')}}">Home</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('home')}}">Home</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-dark" href="{{ url_for('tour')}}">Take A Tour</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('tour')}}">Take A Tour</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-dark" href="#">Sign Up</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="#">Sign Up</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-dark" href="#">Login</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="#">Login</a>
                         </li>
 
                     {% endif %}
