--- a/HMS/templates/Home.html
+++ b/HMS/templates/Home.html
@@ -10,18 +10,17 @@
     <link href="../static/main.css" rel="stylesheet">
     <title>HMS</title>
   </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top" style="background-color: rgba(0,0,0,0.7)" id="mainNav">
+
+
+  <body class="hbody">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed-top">
       <div class="container">
         <img class="icon navbar-brand js-scroll-trigger" src="/static/img/whitelogo.png" alt="HMS icon" href="#page-top" >
-        <button class="navbar-toggler navbar-toggler-right " type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-dark navbar-toggler-right " type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('home') }}">Home</a>
-            </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('about') }}">About</a>
             </li>
@@ -32,7 +31,7 @@
               <a class="nav-link js-scroll-trigger text-white" href="#">Sign Up</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-white" href="#">Login</a>
+              <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('login') }}">Login</a>
             </li>
           </ul>
         </div>
@@ -44,7 +43,7 @@
         <div class="row">
           <div class="col-black mx-auto">
             <h1 class="text-uppercase">
-              Welcome to Ashesi Hostel Mangement System<br>
+              Welcome to Ashesi Hostel Management System<br>
               <strong>HMS</strong>
             </h1>
             <hr>
@@ -66,5 +65,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
   </body>
 </html>
