--- a/HMS/templates/about.html
+++ b/HMS/templates/about.html
@@ -2,7 +2,8 @@
 {% block content %}
     <div class="container">
         <div>
-            <h1 class = "text-center display-1"> About HMS</h1>
+            <br><br><br><br><br>
+            <h1 class = "text-center display-1" id="aa">About HMS</h1>
         </div>
         <br>
 
@@ -10,7 +11,7 @@
             <div>
                 <h3 class = "text-center display-4">The HMS Story</h3>
                 <br>
-                <p>
+                <p class = "text-center">
                     Every student wants a nice hostel close to campus, but almost always we find that students and hostels managers end up in a stressful mess because students will book late and hostel managers will keep overbooking.
                     Students are also left at the mercy of the hostel managers to decide which room they go, if they cannot make the trip to choose their room.
                     Sometimes the students end up without rooms because the hostel managers overbooked and cannot identify the first or last person on their lists.
@@ -24,7 +25,7 @@
             <div>
                 <h3 class = "text-center display-4">How we began</h3>
                 <br>
-                <p>
+                <p class = "text-center">
                    We began operations in 2018 when we as students realised the stress and frustration it took just to get the perfect room.
                     Hostel managers immediately understood our value proposition and today we manage all the hostels on the Ashesi campus😉
 
@@ -38,15 +39,15 @@
                 <br>
 
                 <div class="row">
-                    <div class="card col-md-4 col-sm-6 col-xs-12 border-0" style="width: 18rem;">
+                    <div class="card col-md-4 col-sm-6 col-xs-12 border-0 bg-transparent" style="width: 18rem;">
                       <img class="card-img-top rounded-circle" style="height: 300px" src="/static/img/back3.jpg" alt="Card image cap">
                       <div class="card-body">
-                        <h5 class="card-title">Daniel Olukoya</h5>
-                        <p class="card-text">Junior student at Ashesi University. Offering Computer Science.</p>
+                        <h5 class="card-title text-center">Daniel Olukoya</h5>
+                        <p class="card-text text-center">Junior student at Ashesi University. Offering Computer Science.</p>
                       </div>
                     </div>
 
-                    <div class="card col-md-4 col-sm-6 col-xs-12 border-0" style="width: 18rem;">
+                    <div class="card col-md-4 col-sm-6 col-xs-12 border-0 bg-transparent" style="width: 18rem;">
                       <img class="card-img-top rounded-circle" style="height: 300px" src="/static/img/back3.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Yaw Darfour Botwe</h5>
@@ -54,7 +55,7 @@
                       </div>
                     </div>
 
-                    <div class="card col-md-4 col-sm-6 col-xs-12 border-0" style="width: 18rem;">
+                    <div class="card col-md-4 col-sm-6 col-xs-12 border-0 bg-transparent" style="width: 18rem;">
                       <img class="card-img-top rounded-circle" style="height: 300px" src="/static/img/back3.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Oswald Fiifi Amissah</h5>
