--- a/HMS/templates/signup.html
+++ b/HMS/templates/signup.html
@@ -1,1 +1,36 @@
-{%extends "Home.html"%}
+{%extends "layout.html"%}
+{% block content %}
+    <div id="box">
+        <img src="/static/img/HMS-5.png" alt="HMS icon" href="#page-top" class="logo" >
+        <form>
+            <div>
+                <input type="text" name="" required="">
+                <label>E-mail</label>
+            </div>
+            <div>
+                <input type="text" name="" required="">
+                <label>First Name</label>
+            </div>
+            <div>
+                <input type="text" name="" required="">
+                <label>Last Name</label>
+            </div>
+            <div>
+                <input type="password" name="" required="">
+                <label>Password</label>
+            </div>
+            <div>
+                <input type="password" name="" required="">
+                <label>Confirm Password</label><br>
+            </div>
+            <div>
+                <input type="submit" name="" required="" value="Sign Up">
+            </div>
+            <div>
+               <a>Already Have an Account? </a><a href="#">Login</a>
+            </div>
+        </form>
+    </div>
+
+{% endblock %}
+
