fixed navigation for all pages

--- a/HMS/templates/Home.html
+++ b/HMS/templates/Home.html
@@ -28,7 +28,7 @@
               <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('tour') }}">Take a Tour</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-white" href="#">Sign Up</a>
+              <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('signup')}}">Sign Up</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('login') }}">Login</a>
@@ -50,8 +50,8 @@
           </div>
           <div class="col-black mx-auto">
             <p class="text-white mb-5">A reliable service that helps hostels manage the day to day activities in the respective hostels.<br>And also help students secure and leave rooms/hostels to other ones</p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#">Register Now</a><br><br>
-            <a>Already Have An Account? </a><a id="login" href="#">Login Here</a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="{{ url_for('signup')}}">Register Now</a><br><br>
+            <a>Already Have An Account? </a><a id="login" href="{{ url_for('login')}}">Login Here</a>
           </div>
         </div>
       </div>
