--- a/HMS/templates/About_TourLayout.html
+++ b/HMS/templates/About_TourLayout.html
@@ -40,10 +40,10 @@
                           <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('about') }}">About</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-white" href="#">Sign Up</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('signup')}}">Sign Up</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-white" href="#">Login</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('login')}}">Login</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
@@ -53,10 +53,10 @@
                           <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('tour')}}">Take A Tour</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-white" href="#">Sign Up</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('signup')}}">Sign Up</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-white" href="#">Login</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('login')}}">Login</a>
                         </li>
 
                     {% endif %}
