--- a/HMS/templates/about.html
+++ b/HMS/templates/about.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <br>
-        <div>
+        <div class="row">
             <div>
                 <h3 class = "text-center display-4">Meet the team</h3>
                 <br>
@@ -67,7 +67,7 @@
                 </div>
 
             </div>
-            <div>
+            <div class="row">
                 <br>
                 <br>
                 <br>
