--- a/HMS/templates/layout.html
+++ b/HMS/templates/layout.html
@@ -27,7 +27,7 @@
               <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('tour') }}">Take a Tour</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-white" href="#">Sign Up</a>
+              <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('signup')}}">Sign Up</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('login') }}">Login</a>
