--- a/HMS/templates/signup.html
+++ b/HMS/templates/signup.html
@@ -27,7 +27,7 @@
                 <input type="submit" name="" required="" value="Sign Up">
             </div>
             <div>
-               <a>Already Have an Account? </a><a href="#">Login</a>
+               <a>Already Have an Account? </a><a href="{{ url_for('login') }}">Login</a>
             </div>
         </form>
     </div>
