--- a/HMS/templates/login.html
+++ b/HMS/templates/login.html
@@ -17,7 +17,7 @@
         </form>
     </div>
     <div id="box2">
-        <a>Don't Have an Account? </a><a href="#">Sign Up</a>
+        <a>Don't Have an Account? </a><a href="{{ url_for('signup') }}">Sign Up</a>
     </div>
 
 {% endblock %}
