--- a/HMS/templates/layout.html
+++ b/HMS/templates/layout.html
@@ -21,16 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('home')}}">Home</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('about') }}">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('tour') }}">Take a Tour</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('signup')}}">Sign Up</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('login') }}">Login</a>
             </li>
           </ul>
         </div>
