--- a/HMS/static/main.css
+++ b/HMS/static/main.css
@@ -92,6 +92,7 @@ header.masthead{
 .navbar{
   background-color: rgba(0,0,0,1);
   position: fixed;
+  z-index: 9;
   width: 100%;
   box-shadow: 3px;
 }
@@ -101,6 +102,7 @@ header.masthead{
   position: fixed;
   font-size: 19px;
   float: right;
+  z-index: 9;
   margin-left: 60px;
   width: 100%;
   box-shadow: 3px;
@@ -205,7 +207,6 @@ header.masthead{
   margin-bottom: 50px;
   width: 50%;
   padding: 0;
-  float:
 }
 
 /*.teamimg{
