--- a/HMS/templates/about.html
+++ b/HMS/templates/about.html
@@ -39,7 +39,7 @@
                 <br>
 
                 <div class="row">
-                    <div class="card col-md-4 col-sm-6 col-xs-12 border-0 bg-transparent" style="width: 18rem;">
+                    <div class="card col-lg-4 col-md-4 col-sm-6 col-xs-12 border-0 bg-transparent" style="width: 18rem;">
                       <img class="card-img-top rounded-circle" style="height: 300px" src="/static/img/back3.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title text-center">Daniel Olukoya</h5>
@@ -47,7 +47,7 @@
                       </div>
                     </div>
 
-                    <div class="card col-md-4 col-sm-6 col-xs-12 border-0 bg-transparent" style="width: 18rem;">
+                    <div class="card col-lg-4 col-md-4 col-sm-6 col-xs-12 border-0 bg-transparent" style="width: 18rem;">
                       <img class="card-img-top rounded-circle" style="height: 300px" src="/static/img/back3.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Yaw Darfour Botwe</h5>
@@ -55,11 +55,11 @@
                       </div>
                     </div>
 
-                    <div class="card col-md-4 col-sm-6 col-xs-12 border-0 bg-transparent" style="width: 18rem;">
+                    <div class="card col-lg-4 col-md-4 col-sm-6 col-xs-12 border-0 bg-transparent" style="width: 18rem;">
                       <img class="card-img-top rounded-circle" style="height: 300px" src="/static/img/back3.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Oswald Fiifi Amissah</h5>
-                        <p class="card-text">Junior student at Ashesi University. Offering Computer Science.</p>
+                        <p class="card-text">Junior student at Ashesi University. Offering Management Information Systems.</p>
                       </div>
                     </div>
 
