--- a/HMS/templates/About_TourLayout.html
+++ b/HMS/templates/About_TourLayout.html
@@ -24,7 +24,7 @@
     <!--Navigation Bar-->
     <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top" id="mainNav">
         <div class="container">
-            <a href="/"> <img class="icon navbar-brand js-scroll-trigger" src="/static/img/whitelogo.png" alt="HMS icon" href="#page-top"> </a>
+            <a href="/"> <img class="icon navbar-brand js-scroll-trigger" src="/static/img/whitelogo.png" alt="HMS icon" href="{{ url_for('home') }}"> </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,10 +40,10 @@
                           <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('about') }}">About</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-white" href="#">Sign Up</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('signup')}}">Sign Up</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-white" href="#">Login</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('login')}}">Login</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
@@ -53,10 +53,10 @@
                           <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('tour')}}">Take A Tour</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-white" href="#">Sign Up</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('signup')}}">Sign Up</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-white" href="#">Login</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('login')}}">Login</a>
                         </li>
 
                     {% endif %}
