--- a/HMS/templates/login.html
+++ b/HMS/templates/login.html
@@ -1,24 +1,52 @@
-{%extends "layout.html"%}
+{% extends "layout.html" %}
 {% block content %}
-    <div id="box">
-        <img src="/static/img/HMS-5.png" alt="HMS icon" href="#page-top" class="logo" >
-        <form>
-            <div>
-                <input type="text" name="" required="">
-                <label>E-mail</label>
-            </div>
-            <div>
-                <input type="password" name="" required="">
-                <label>Password</label>
-            </div>
-            <div>
-                <input type="submit" name="" required="" value="Login">
+    <div class="lcontent-section">
+        <form method="POST" action="">
+            {{ form.hidden_tag() }}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Login</legend>
+                <div class="form-group">
+                    {{ form.email.label(class="form-control-label") }}
+                    {% if form.email.errors %}
+                        {{ form.email(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.email.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.email(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    {{ form.password.label(class="form-control-label") }}
+                    {% if form.password.errors %}
+                        {{ form.password(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.password.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.password(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-check">
+                    {{ form.remember(class="form-check-input") }}
+                    {{ form.remember.label(class="form-check-label") }}
+                </div>
+            </fieldset>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-outline-info") }}
+                <small class="text-muted ml-2">
+                    <a href="#">Forgot Password?</a>
+                </small><br>
+                <div class="border-top mt-3 pt-3">
+                    <small class="text-muted">
+                        Need An Account? <a class="ml-2" href="{{ url_for('signup') }}">Sign Up Now</a>
+                    </small>
+                </div>
             </div>
         </form>
     </div>
-    <div id="box2">
-        <a>Don't Have an Account? </a><a href="#">Sign Up</a>
-    </div>
-
-{% endblock %}
-
+{% endblock content %}
