adin layout and temporary route

--- a/HMS/templates/layout.html
+++ b/HMS/templates/layout.html
@@ -10,9 +10,9 @@
     <link href="../static/main.css" rel="stylesheet">
 
     {% if title %}
-        <title>Flask Blog - {{ title }}</title>
+        <title>HMS - {{ title }}</title>
     {% else %}
-        <title>Flask Blog</title>
+        <title>HMS</title>
     {% endif %}
   </head>
 
