--- a/HMS/static/main.css
+++ b/HMS/static/main.css
@@ -108,6 +108,17 @@ header.masthead{
   width: 100%;
 }
 
+#announcement{
+  position: absolute;
+  padding:100px;
+  background: hsla(0, 100%, 100%, 0.7);
+  border-radius: 15px;
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0,0,0,0.5);
+  background: hsla(0, 100%, 100%, 0.7);
+  padding: 10px 20px;
+
+}
 
 
 
