table styling added

--- a/HMS/templates/addroom.html
+++ b/HMS/templates/addroom.html
@@ -1,6 +1,6 @@
 {% extends "admin_layout.html" %}
 {% block content %}
-    <div style="margin-top: 100px; padding: 25px;" >
+    <div style="padding: 25px;" >
         <form method = "POST" action = "" >
             {{form.hidden_tag()}}
             <fieldset class = "form-group" >
