--- a/HMS/templates/editroom.html
+++ b/HMS/templates/editroom.html
@@ -1,6 +1,6 @@
 {% extends "admin_layout.html" %}
 {% block content %}
-    <div style="margin-top: 100px; padding: 25px;" >
+    <div style="padding: 25px;" >
         <form method = "POST" action = "" >
             {{form.hidden_tag()}}
             <fieldset class = "form-group" >
@@ -32,7 +32,26 @@
                     {% endif%}
                 </div>
                 <div class = "form-group" >
-                    {{table}}
+                    <table class="table table-striped table-hover">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th>name</th>
+                                <th>paid</th>
+                                <th>remain</th>
+                                <th>action</th>
+                            <tr>
+                        </thead>
+                        <tbody>
+                            {% for person in persons %}
+                            <tr>
+                                <td>{{ person.name }}</td>
+                                <td>{{ person.paid }}</td>
+                                <td>{{ person.remain }}</td>
+                                <td>{{ person.action }}</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
             </fieldset>
             <div class = "form-group">
