--- a/HMS/templates/occupants_details.html
+++ b/HMS/templates/occupants_details.html
@@ -1,5 +1,28 @@
 {% extends "admin_layout.html" %}
 {% block content %}
+    <div class = "form-group" >
+        <strong><legend>Students in hostel</legend></strong>
+        <table class="table table-striped table-hover">
+            <thead class="thead-dark">
+                <tr>
+                    <th>name</th>
+                    <th>paid</th>
+                    <th>remain</th>
+                    <th>action</th>
+                <tr>
+            </thead>
+            <tbody>
+                {% for person in persons %}
+                <tr>
+                    <td>{{ person.name }}</td>
+                    <td>{{ person.paid }}</td>
+                    <td>{{ person.remain }}</td>
+                    <td>{{ person.action }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
 
 {% endblock content%}
