update account added

--- a/HMS/templates/occupants_details.html
+++ b/HMS/templates/occupants_details.html
@@ -2,13 +2,13 @@
 {% block content %}
     <div class = "form-group" >
         <strong><legend>Students in hostel</legend></strong>
-        <table class="table table-striped table-hover">
+        <table class="table table-striped">
             <thead class="thead-dark">
                 <tr>
-                    <th>name</th>
-                    <th>paid</th>
-                    <th>remain</th>
-                    <th>action</th>
+                    <th>Name</th>
+                    <th>Paid</th>
+                    <th>Remain</th>
+                    <th>Action</th>
                 <tr>
             </thead>
             <tbody>
