--- a/HMS/templates/admin_layout.html
+++ b/HMS/templates/admin_layout.html
@@ -49,10 +49,11 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-white" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Account</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Edit Admin Details</a>
+                                <a class="dropdown-item" href="{{ url_for('updateaccount')}}">Edit Admin Details</a>
+                                <a class="dropdown-item" href="#">Change Password</a>
                                 <a class="dropdown-item" href="#">Edit Hostel Details</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Logout</a>
+                                <a class="dropdown-item" href="{{ url_for('logout')}}">Logout</a>
                             </div>
                         </li>
 
@@ -107,6 +108,7 @@
           </div>
         </div>
     </main>
+
 
 
     <!-- Optional JavaScript -->
